--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -14,32 +14,18 @@
         android:layout_height="wrap_content"
         android:orientation="vertical" >
 
-        <SeekBar
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/from"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/circular_range_seek_bar" />
+            android:id="@+id/to"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <info.ljungqvist.android.widget.CircularRangeSeekBar
             android:id="@+id/circular_range_seek_bar_2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <info.ljungqvist.android.widget.CircularRangeSeekBarLegacy
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:focusable="true" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/legacy_circular_range_seek_bar" />
-
-        <info.ljungqvist.android.widget.LegacyCircularRangeSeekBar
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
