--- a/app/src/main/res/drawable/scrubber_control_holo.xml
+++ b/app/src/main/res/drawable/scrubber_control_holo.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<animated-selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true"
         android:drawable="@drawable/scrubber_control_pressed_holo" /> <!-- pressed -->
     <item android:state_activated="true"
         android:drawable="@drawable/scrubber_control_pressed_holo" /> <!-- focused -->
     <item android:state_enabled="true" android:drawable="@drawable/scrubber_control_normal_holo"/> <!-- idle state -->
-</selector>
+</animated-selector>
