--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -22,6 +22,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+        <com.gc.materialdesign.views.Slider
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <TextView
             android:id="@+id/from"
             android:layout_width="wrap_content"
